--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <title>Plain HTML site using GitLab Pages</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class= "vaultBG">
     <div class="navbar">
       <a href="https://pages.gitlab.io/plain-html/">Plain HTML Example</a>
-      <a href="https://gitlab.com/pages/plain-html/">Repository</a>
+      <a href="https://gitlab.com/pages/plain-html/">Repository<a>
       <a href="https://gitlab.com/pages/">Other Examples</a>
     </div>
 
-    <h1>Hello World!</h1>
+    <h1 class = "Smaller">Hello World!</h1>
 
     <p>
       This is a simple plain-HTML website on GitLab Pages, without any fancy static site generator.
